samples/es/vectores7.sin
a = vec[]
// error: índice ha de ser numérico
a['text'] = 123
imp a